--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-linking": "~4.0.1",
     "expo-router": "^1.2.1",
     "expo-status-bar": "~1.4.4",
+    "mongodb": "^5.1.0",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-safe-area-context": "4.5.0",
