--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "miembros-app",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -21,10 +21,15 @@
     "react-native": "0.71.3",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
+  },
+  "overrides": {
+    "metro": "0.73.7",
+    "metro-resolver": "0.73.7"
   },
   "private": true
 }
